examples/errors/binding-unused.sem
system (Syntax x Syntax) => Syntax

rule Unused
<a, a> => <c>
----------
<a, x> => <c>

